# src/main/java/io/qozz/qozzbank/service/dto/TransferResult.java
@@ -1,0 +1,15 @@
+package io.qozz.qozzbank.service.dto;
+
+
+import io.qozz.qozzbank.domain.enumeration.TransactionStatus;
+
+import java.time.OffsetDateTime;
+import java.util.UUID;
+
+public record TransferResult(
+        UUID operationId,
+        TransactionStatus status,
+        OffsetDateTime createdAt
+) {
+}
+
